--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,12 @@
     "dist/css/bc-phone-number.css",
     "dist/js/bc-phone-number.js"
   ],
-  "version": "5.0.7",
+  "version": "5.0.12",
   "authors": [
     "Abdullah Alansari <ahimta@gmail.com>",
     "Justin Tormey <justin@blockchain.com>",
-    "Sjors Provoost <sjors@blockchain.com>"
+    "Sjors Provoost <sjors@blockchain.com>",
+    "Philip London <philip@blockchain.com>"
   ],
   "description": "An AngularJS international phone input directive",
   "moduleType": [
@@ -40,7 +41,7 @@
     "bootstrap": "~3.3.5",
     "bc-css-flags": "~3.0.0",
     "bc-countries": "~2.0.0",
-    "angular-bootstrap": "~0.14.1"
+    "angular-bootstrap": "0.14.0 - 1.3.*"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
