--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bc-phone-number",
-  "version": "5.0.7",
+  "version": "5.0.12",
   "description": "An AngularJS international phone input directive",
   "main": "src/bc-phone-number.js",
   "scripts": {
@@ -33,9 +33,9 @@
     "browserify": "^11.2.0",
     "browserify-shim": "^3.8.10",
     "del": "^2.0.2",
+    "git-changelog": "^0.1.8",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
-    "grunt-bump": "^0.6.0",
     "grunt-karma": "^0.12.1",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
